[!x86] Disable TPM drivers. TPMs are currently only fitted in PCs.
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@17393 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,5 +1,6 @@
 linux-2.6 (2.6.39~rc7-1~experimental.2) UNRELEASED; urgency=low
 
+  [ maximilian attems ]
   * [x86] Enable CRYPTO_AES_NI_INTEL for all flavours. (closes: #623631)
   * topconfig: Enable SND_USB_6FIRE, SND_FIREWIRE_SPEAKERS,
     MEDIA_CONTROLLER, DVB_USB_TECHNISAT_USB2, USB_GSPCA_NW80X,
@@ -7,6 +8,9 @@ linux-2.6 (2.6.39~rc7-1~experimental.2) UNRELEASED; urgency=low
   * [x86] Enable modular XEN_NETDEV_BACKEND.
   * topconfig enable mem cgroup RESOURCE_COUNTERS, CGROUP_MEM_RES_CTLR.
     (closes: #534964)
+
+  [ Ben Hutchings ]
+  * [!x86] Disable TPM drivers. TPMs are currently only fitted in PCs.
 
  -- maximilian attems <maks@debian.org>  Tue, 10 May 2011 23:24:26 +0200
 
