--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -11,6 +11,8 @@ linux-2.6 (2.6.39~rc7-1~experimental.2) UNRELEASED; urgency=low
 
   [ Ben Hutchings ]
   * [!x86] Disable TPM drivers. TPMs are currently only fitted in PCs.
+  * rt2800usb: Enable support for more USB devices including
+    Linksys WUSB600N (Closes: #596626)
 
  -- maximilian attems <maks@debian.org>  Tue, 10 May 2011 23:24:26 +0200
 
