postinst: Remove specific support for running a ramdisk creator
Warn users that specify one in /etc/kernel-img.conf.
Require initramfs-tools >= 0.99, which does not depend on being directly
invoked.


git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@17424 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -17,6 +17,9 @@ linux-2.6 (2.6.39~rc7-1~experimental.2) UNRELEASED; urgency=low
     upstream default, this was set as an experiment rather than a
     recommendation! SLUB generally has poorer performance than SLAB on
     larger systems.
+  * postinst: Remove specific support for running a ramdisk creator;
+    warn users that specify one in /etc/kernel-img.conf
+  * Require initramfs-tools >= 0.99, which installs a postinst hook
 
  -- maximilian attems <maks@debian.org>  Tue, 10 May 2011 23:24:26 +0200
 
