--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,4 +1,4 @@
-linux-2.6 (2.6.39-1) UNRELEASED; urgency=low
+linux-2.6 (2.6.39-1) unstable; urgency=low
 
   [ maximilian attems ]
   * [x86] Enable CRYPTO_AES_NI_INTEL for all flavours. (closes: #623631)
@@ -21,7 +21,7 @@ linux-2.6 (2.6.39-1) UNRELEASED; urgency=low
     warn users that specify one in /etc/kernel-img.conf
   * Require initramfs-tools >= 0.99, which installs a postinst hook
 
- -- maximilian attems <maks@debian.org>  Tue, 10 May 2011 23:24:26 +0200
+ -- maximilian attems <maks@debian.org>  Thu, 19 May 2011 10:24:15 +0200
 
 linux-2.6 (2.6.39~rc7-1~experimental.1) experimental; urgency=low
 
