fix postinst + add forgotten changelog entry.
this check is superflous and looking for wrong path.
As we depend on an initramfs generator the failure of generating
would have happened already earlier.

git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@17459 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -8,6 +8,7 @@ linux-2.6 (2.6.39-1) unstable; urgency=low
   * [x86] Enable modular XEN_NETDEV_BACKEND.
   * topconfig enable mem cgroup RESOURCE_COUNTERS, CGROUP_MEM_RES_CTLR.
     (closes: #534964)
+  * Cleanup configs.
 
   [ Ben Hutchings ]
   * [!x86] Disable TPM drivers. TPMs are currently only fitted in PCs.
