--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -22,6 +22,10 @@ linux-2.6 (2.6.39-1) unstable; urgency=low
     warn users that specify one in /etc/kernel-img.conf
   * Require initramfs-tools >= 0.99, which installs a postinst hook
 
+  [ Arnaud Patard ]
+  * [armel] Disable eeti touchscreen driver due to missing irq_to_gpio on
+    several platforms.
+
  -- maximilian attems <maks@debian.org>  Thu, 19 May 2011 10:24:15 +0200
 
 linux-2.6 (2.6.39~rc7-1~experimental.1) experimental; urgency=low
