--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,3 +1,11 @@
+linux-2.6 (2.6.39-2) UNRELEASED; urgency=low
+
+  [ Ben Hutchings ]
+  * [x86] Enable BACKLIGHT_APPLE, replacing BACKLIGHT_MBP_NVIDIA
+    (Closes: #627492)
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Sat, 21 May 2011 22:13:08 +0100
+
 linux-2.6 (2.6.39-1) unstable; urgency=low
 
   [ maximilian attems ]
