--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -3,6 +3,11 @@ linux-2.6 (2.6.39-2) UNRELEASED; urgency=low
   [ Ben Hutchings ]
   * [x86] Enable BACKLIGHT_APPLE, replacing BACKLIGHT_MBP_NVIDIA
     (Closes: #627492)
+  * cgroups: Disable memory resource controller by default. Allow it
+    to be enabled using kernel parameter 'cgroup_enable=memory'.
+  * rt2800usb: Enable support for more USB devices including
+    Linksys WUSB600N (Closes: #596626) (this change was accidentally
+    omitted from 2.6.39-1)
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sat, 21 May 2011 22:13:08 +0100
 
