--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,4 +1,4 @@
-linux-2.6 (3.0.0~rc6-1~experimental.2) experimental; urgency=low
+linux-2.6 (3.0.0~rc6-1~experimental.2) UNRELEASED; urgency=low
 
   [ maximilian attems ]
   * Topconfig enable modular VIDEO_SR030PC30, VIDEO_NOON010PC30,
@@ -6,6 +6,7 @@ linux-2.6 (3.0.0~rc6-1~experimental.2) experimental; urgency=low
     SOC_CAMERA_OV9740, USB_YUREX.
   * [x86] enable modular VIDEO_VIA_CAMERA.
   * [x86_32] enable modular XO15_EBOOK.
+  * ALSA: hda - Enable auto-parser as default for Conexant codecs.
 
  -- maximilian attems <maks@debian.org>  Tue, 05 Jul 2011 14:25:29 +0200
 
