--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -8,6 +8,9 @@ linux-2.6 (3.0.0~rc6-1~experimental.2) UNRELEASED; urgency=low
   * [x86_32] enable modular XO15_EBOOK.
   * ALSA: hda - Enable auto-parser as default for Conexant codecs.
 
+  [ Ben Hutchings ]
+  * linux-support, linux-tools: Use dh_python2 instead of dh_pysupport
+
  -- maximilian attems <maks@debian.org>  Tue, 05 Jul 2011 14:25:29 +0200
 
 linux-2.6 (3.0.0~rc6-1~experimental.1) experimental; urgency=low
