--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,4 +1,6 @@
-linux-2.6 (3.0.0~rc6-1~experimental.2) UNRELEASED; urgency=low
+linux-2.6 (3.0.0~rc7-1~experimental.1) UNRELEASED; urgency=low
+
+  * New upstream release candidate
 
   [ maximilian attems ]
   * Topconfig enable modular VIDEO_SR030PC30, VIDEO_NOON010PC30,
