--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -12,6 +12,7 @@ linux-2.6 (3.0.0~rc7-1~experimental.1) UNRELEASED; urgency=low
 
   [ Ben Hutchings ]
   * linux-support, linux-tools: Use dh_python2 instead of dh_pysupport
+  * aufs: Update for 3.0
 
  -- maximilian attems <maks@debian.org>  Tue, 05 Jul 2011 14:25:29 +0200
 
