--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -14,6 +14,9 @@ linux-2.6 (3.0.0~rc7-1~experimental.1) UNRELEASED; urgency=low
   * linux-support, linux-tools: Use dh_python2 instead of dh_pysupport
   * aufs: Update for 3.0
 
+  [ Arnaud Patard ]
+  * Merge ixp4xx build fix and enable ixp4xx back
+
  -- maximilian attems <maks@debian.org>  Tue, 05 Jul 2011 14:25:29 +0200
 
 linux-2.6 (3.0.0~rc6-1~experimental.1) experimental; urgency=low
