--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -21,6 +21,10 @@ linux-2.6 (3.0.0~rc7-1~experimental.1) UNRELEASED; urgency=low
 
   [ Arnaud Patard ]
   * Merge ixp4xx build fix and enable ixp4xx back
+ 
+  [ Aurelien Jarno ]
+  * [mips/octeon] Disable MEGARAID_SAS, SUSPEND, HIBERNATION, PM_RUNTIME.
+    Enable FUSION, FUSION_SAS.
 
  -- maximilian attems <maks@debian.org>  Tue, 05 Jul 2011 14:25:29 +0200
 
