Reduce required initramfs-tools version to 0.99~, to ease backporting
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@17841 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -18,6 +18,7 @@ linux-2.6 (3.0.0~rc7-1~experimental.1) UNRELEASED; urgency=low
     - Slovak (Slavko)
   * [x86] comedi: Enable the same drivers as in stable (squeeze), except
     for ISA drivers on amd64 (Closes: #633516)
+  * Reduce required initramfs-tools version to 0.99~, to ease backporting
 
   [ Arnaud Patard ]
   * Merge ixp4xx build fix and enable ixp4xx back
