--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -25,7 +25,8 @@ linux-2.6 (3.0.0~rc7-1~experimental.1) UNRELEASED; urgency=low
  
   [ Aurelien Jarno ]
   * [mips/octeon] Disable MEGARAID_SAS, SUSPEND, HIBERNATION, PM_RUNTIME.
-    Enable FUSION, FUSION_SAS.
+    Enable FUSION, FUSION_SAS, HW_RANDOM, HW_RANDOM_OCTEON, 
+    OCTEON_MGMT_ETHERNET, CONFIG_OCTEON_ETHERNET.
 
  -- maximilian attems <maks@debian.org>  Tue, 05 Jul 2011 14:25:29 +0200
 
