--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,6 +1,6 @@
-linux-2.6 (3.0.0~rc7-1~experimental.1) UNRELEASED; urgency=low
+linux-2.6 (3.0.0-1) UNRELEASED; urgency=low
 
-  * New upstream release candidate
+  * New upstream release: http://kernelnewbies.org/Linux_3.0
 
   [ maximilian attems ]
   * Topconfig enable modular VIDEO_SR030PC30, VIDEO_NOON010PC30,
