--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -28,6 +28,9 @@ linux-2.6 (3.0.0-1) UNRELEASED; urgency=low
     Enable FUSION, FUSION_SAS, HW_RANDOM, HW_RANDOM_OCTEON, 
     OCTEON_MGMT_ETHERNET, CONFIG_OCTEON_ETHERNET.
 
+  [ Bastian Blank ]
+  * [xen] Allow autoloading of backend drivers.
+
  -- maximilian attems <maks@debian.org>  Tue, 05 Jul 2011 14:25:29 +0200
 
 linux-2.6 (3.0.0~rc6-1~experimental.1) experimental; urgency=low
