[armhf/mx5] Explicitly configure this flavour to support i.MX51
It is not currently possible to support other i.MX5x processors as well.


git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@17848 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -19,6 +19,8 @@ linux-2.6 (3.0.0-1) UNRELEASED; urgency=low
   * [x86] comedi: Enable the same drivers as in stable (squeeze), except
     for ISA drivers on amd64 (Closes: #633516)
   * Reduce required initramfs-tools version to 0.99~, to ease backporting
+  * [armhf/mx5] Explicitly configure this flavour to support i.MX51; it
+    is not currently possible to support other i.MX5x processors as well
 
   [ Arnaud Patard ]
   * Merge ixp4xx build fix and enable ixp4xx back
