[amd64] Add rt featureset with 3.0-rt2 patch set
Mostly done by Uwe Kleine-König.


git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@17850 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -33,6 +33,9 @@ linux-2.6 (3.0.0-1) UNRELEASED; urgency=low
   [ Bastian Blank ]
   * [xen] Allow autoloading of backend drivers.
 
+  [ Uwe Kleine-König ]
+  * [amd64] Add rt featureset with 3.0-rt2 patch set
+
  -- maximilian attems <maks@debian.org>  Tue, 05 Jul 2011 14:25:29 +0200
 
 linux-2.6 (3.0.0~rc6-1~experimental.1) experimental; urgency=low
