--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,4 +1,4 @@
-linux-2.6 (3.0.0-1) UNRELEASED; urgency=low
+linux-2.6 (3.0.0-1) unstable; urgency=low
 
   * New upstream release: http://kernelnewbies.org/Linux_3.0
 
@@ -36,7 +36,7 @@ linux-2.6 (3.0.0-1) UNRELEASED; urgency=low
   [ Uwe Kleine-König ]
   * [amd64] Add rt featureset with 3.0-rt2 patch set
 
- -- maximilian attems <maks@debian.org>  Tue, 05 Jul 2011 14:25:29 +0200
+ -- Ben Hutchings <ben@decadent.org.uk>  Sun, 24 Jul 2011 02:42:27 +0200
 
 linux-2.6 (3.0.0~rc6-1~experimental.1) experimental; urgency=low
 
