--- a/linux-kbuild-2.6/debian/changelog
+++ b/linux-kbuild-2.6/debian/changelog
@@ -1,3 +1,9 @@
+linux-kbuild-2.6 (3.0.0-1) unstable; urgency=low
+
+  * New upstream release
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Sun, 24 Jul 2011 15:38:35 +0200
+
 linux-kbuild-2.6 (3.0.0~rc5-1~experimental.1) experimental; urgency=low
 
   * New upstream release candidate
