--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,3 +1,10 @@
+linux-2.6 (3.0.0-2) unstable; urgency=low
+
+  [ Aurelien Jarno ]
+  * Add configuration files for s390x architecture.
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Wed, 27 Jul 2011 23:58:10 +0200
+
 linux-2.6 (3.0.0-1) unstable; urgency=low
 
   * New upstream release: http://kernelnewbies.org/Linux_3.0
