--- a/linux-kbuild-2.6/debian/changelog
+++ b/linux-kbuild-2.6/debian/changelog
@@ -1,3 +1,9 @@
+linux-kbuild-2.6 (3.0.0-2) unstable; urgency=low
+
+  * Include new script depmod.sh (Closes: #635539)
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Fri, 29 Jul 2011 01:00:20 +0200
+
 linux-kbuild-2.6 (3.0.0-1) unstable; urgency=low
 
   * New upstream release
