--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,4 +1,4 @@
-linux-2.6 (3.0.0-2) unstable; urgency=low
+linux-2.6 (3.0.0-2) UNRELEASED; urgency=low
 
   [ Aurelien Jarno ]
   * Add configuration files for s390x architecture.
