--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -3,6 +3,10 @@ linux-2.6 (3.0.0-2) UNRELEASED; urgency=low
   [ Aurelien Jarno ]
   * Add configuration files for s390x architecture.
 
+  [ Ben Hutchings ]
+  * linux-libc-dev: Install include/asm under arch-specific directory;
+    mark package as multi-arch-coinstallable (Multi-Arch: same)
+
  -- Ben Hutchings <ben@decadent.org.uk>  Wed, 27 Jul 2011 23:58:10 +0200
 
 linux-2.6 (3.0.0-1) unstable; urgency=low
