/dists/trunk/linux-tools: Rename package.
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@17870 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-tools/debian/changelog
+++ b/linux-tools/debian/changelog
@@ -1,3 +1,9 @@
+linux-tools (3.0.0-3) UNRELEASED; urgency=low
+
+  * Rename to linux-tools.
+
+ -- Bastian Blank <waldi@debian.org>  Sun, 31 Jul 2011 12:36:15 +0200
+
 linux-kbuild-2.6 (3.0.0-2) unstable; urgency=low
 
   * Include new script depmod.sh (Closes: #635539)
