[i386] Fix alignment of alternative instruction entries (Closes: #640964)
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@18108 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -6,6 +6,7 @@ linux-2.6 (3.1.0~rc6-1~experimental.1) UNRELEASED; urgency=low
   * [ia64] Disable GENERIC_GPIO (fixes FTBFS)
   * [i386] libertas: prioritize usb8388_olpc.bin firmware on OLPC machines
   * [armel/ixp4xx] Add gpioblib support (fixes FTBFS)
+  * [i386] Fix alignment of alternative instruction entries (Closes: #640964)
 
  -- Ben Hutchings <ben@decadent.org.uk>  Mon, 05 Sep 2011 04:18:43 +0100
 
