--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,4 +1,4 @@
-linux-2.6 (3.1.0~rc6-1~experimental.1) UNRELEASED; urgency=low
+linux-2.6 (3.1.0~rc6-1~experimental.1) experimental; urgency=low
 
   * New upstream release candidate
 
@@ -8,7 +8,7 @@ linux-2.6 (3.1.0~rc6-1~experimental.1) UNRELEASED; urgency=low
   * [armel/ixp4xx] Add gpioblib support (fixes FTBFS)
   * [i386] Fix alignment of alternative instruction entries (Closes: #640964)
 
- -- Ben Hutchings <ben@decadent.org.uk>  Mon, 05 Sep 2011 04:18:43 +0100
+ -- Ben Hutchings <ben@decadent.org.uk>  Wed, 21 Sep 2011 05:45:40 +0100
 
 linux-2.6 (3.1.0~rc4-1~experimental.1) experimental; urgency=low
 
