--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,3 +1,9 @@
+linux-2.6 (3.1.0~rc7-1~experimental.1) UNRELEASED; urgency=low
+
+  * New upstream release candidate
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Thu, 22 Sep 2011 04:22:13 +0100
+
 linux-2.6 (3.1.0~rc6-1~experimental.1) experimental; urgency=low
 
   * New upstream release candidate
