--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,11 +1,11 @@
-linux-2.6 (3.1.0~rc7-1~experimental.1) UNRELEASED; urgency=low
+linux-2.6 (3.1.0~rc7-1~experimental.1) experimental; urgency=low
 
   * New upstream release candidate
 
   [ Ben Hutchings ]
   * Build udebs for the installer
 
- -- Ben Hutchings <ben@decadent.org.uk>  Thu, 22 Sep 2011 04:22:13 +0100
+ -- Ben Hutchings <ben@decadent.org.uk>  Sun, 25 Sep 2011 22:52:50 +0100
 
 linux-2.6 (3.1.0~rc6-1~experimental.1) experimental; urgency=low
 
