--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,3 +1,10 @@
+linux-2.6 (3.1.0~rc7-1~experimental.2) UNRELEASED; urgency=low
+
+  [ Ben Hutchings ]
+  * [powerpc/powerpc64] Add missing #include to LPAR console selection fix
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Tue, 27 Sep 2011 06:02:56 +0100
+
 linux-2.6 (3.1.0~rc7-1~experimental.1) experimental; urgency=low
 
   * New upstream release candidate
