--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,4 +1,6 @@
-linux-2.6 (3.1.0~rc7-1~experimental.2) UNRELEASED; urgency=low
+linux-2.6 (3.1.0~rc8-1~experimental.1) UNRELEASED; urgency=low
+
+  * New upstream release candidate
 
   [ Ben Hutchings ]
   * [powerpc/powerpc64] Add missing #include to LPAR console selection fix
