--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -4,6 +4,7 @@ linux-2.6 (3.1.0~rc8-1~experimental.1) UNRELEASED; urgency=low
 
   [ Ben Hutchings ]
   * [powerpc/powerpc64] Add missing #include to LPAR console selection fix
+  * Make kernel-wedge package checks non-fatal in experimental builds
 
  -- Ben Hutchings <ben@decadent.org.uk>  Tue, 27 Sep 2011 06:02:56 +0100
 
