Update to 3.1-rc9; note 2 bug fixes
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@18157 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,6 +1,10 @@
-linux-2.6 (3.1.0~rc8-1~experimental.1) UNRELEASED; urgency=low
+linux-2.6 (3.1.0~rc9-1~experimental.1) UNRELEASED; urgency=low
 
   * New upstream release candidate
+    - drm/i915: FBC off for ironlake and older, otherwise on by default
+      (Closes: #641622)
+    - drm/radeon: Update AVIVO cursor coordinate origin before x/yorigin
+      calculation (Closes: #585130)
 
   [ Ben Hutchings ]
   * [powerpc/powerpc64] Add missing #include to LPAR console selection fix
