--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,10 +1,11 @@
-linux-2.6 (3.1.0~rc9-1~experimental.1) UNRELEASED; urgency=low
+linux-2.6 (3.1.0-1~experimental.1) UNRELEASED; urgency=low
 
-  * New upstream release candidate
+  * New upstream release: http://kernelnewbies.org/Linux_3.1
     - drm/i915: FBC off for ironlake and older, otherwise on by default
       (Closes: #641622)
     - drm/radeon: Update AVIVO cursor coordinate origin before x/yorigin
       calculation (Closes: #585130)
+    - crypto: ghash - Avoid null pointer dereference if no key is set
 
   [ Ben Hutchings ]
   * [powerpc/powerpc64] Add missing #include to LPAR console selection fix
