* debian/changelog: Update. * debian/rules.real: Use xz compression for debug packages.
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@18185 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -12,6 +12,9 @@ linux-2.6 (3.1.0-1~experimental.1) UNRELEASED; urgency=low
   * Make kernel-wedge package checks non-fatal in experimental builds
   * [x86/!486] Enable INTEL_IDLE
 
+  [ Bastian Blank ]
+  * Use xz compression for debug packages.
+
  -- Ben Hutchings <ben@decadent.org.uk>  Tue, 27 Sep 2011 06:02:56 +0100
 
 linux-2.6 (3.1.0~rc7-1~experimental.1) experimental; urgency=low
