--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -14,6 +14,7 @@ linux-2.6 (3.1.0-1~experimental.1) UNRELEASED; urgency=low
 
   [ Bastian Blank ]
   * Use xz compression for debug packages.
+  * Make gcc-4.6 the default compiler.
 
  -- Ben Hutchings <ben@decadent.org.uk>  Tue, 27 Sep 2011 06:02:56 +0100
 
