--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -15,6 +15,8 @@ linux-2.6 (3.1.0-1~experimental.1) UNRELEASED; urgency=low
   [ Bastian Blank ]
   * Use xz compression for debug packages.
   * Make gcc-4.6 the default compiler.
+  * Use shorter versions in the package names.
+  * Remove linux-tools-* binary package.
 
  -- Ben Hutchings <ben@decadent.org.uk>  Tue, 27 Sep 2011 06:02:56 +0100
 
