--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -17,6 +17,7 @@ linux-2.6 (3.1.0-1~experimental.1) UNRELEASED; urgency=low
   * Make gcc-4.6 the default compiler.
   * Use shorter versions in the package names.
   * Remove linux-tools-* binary package.
+  * Drop external module packages stuff.
 
  -- Ben Hutchings <ben@decadent.org.uk>  Tue, 27 Sep 2011 06:02:56 +0100
 
