--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -18,6 +18,7 @@ linux-2.6 (3.1.0-1~experimental.1) UNRELEASED; urgency=low
   * Use shorter versions in the package names.
   * Remove linux-tools-* binary package.
   * Drop external module packages stuff.
+  * Set default security module to Unix Discretionary Access Controls.
 
  -- Ben Hutchings <ben@decadent.org.uk>  Tue, 27 Sep 2011 06:02:56 +0100
 
