* debian/changelog: Update. * debian/config/config:   Disable SECURITY_SELINUX_BOOTPARAM and SECURITY_SELINUX_DISABLE.
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@18202 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -19,6 +19,7 @@ linux-2.6 (3.1.0-1~experimental.1) UNRELEASED; urgency=low
   * Remove linux-tools-* binary package.
   * Drop external module packages stuff.
   * Set default security module to Unix Discretionary Access Controls.
+    - Remove unneeded selinux boot parameter.
 
  -- Ben Hutchings <ben@decadent.org.uk>  Tue, 27 Sep 2011 06:02:56 +0100
 
