aufs: Update to aufs3 for Linux 3.1 (Closes: #644687)
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@18203 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -11,6 +11,7 @@ linux-2.6 (3.1.0-1~experimental.1) UNRELEASED; urgency=low
   * [powerpc/powerpc64] Add missing #include to LPAR console selection fix
   * Make kernel-wedge package checks non-fatal in experimental builds
   * [x86/!486] Enable INTEL_IDLE
+  * aufs: Update to aufs3 for Linux 3.1 (Closes: #644687)
 
   [ Bastian Blank ]
   * Use xz compression for debug packages.
