debian/changelog: Prepare to release (3.1.0-1~experimental.1).
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@18231 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,4 +1,4 @@
-linux-2.6 (3.1.0-1~experimental.1) UNRELEASED; urgency=low
+linux-2.6 (3.1.0-1~experimental.1) experimental; urgency=low
 
   * New upstream release: http://kernelnewbies.org/Linux_3.1
     - drm/i915: FBC off for ironlake and older, otherwise on by default
@@ -22,7 +22,7 @@ linux-2.6 (3.1.0-1~experimental.1) UNRELEASED; urgency=low
   * Set default security module to Unix Discretionary Access Controls.
     - Remove unneeded selinux boot parameter.
 
- -- Ben Hutchings <ben@decadent.org.uk>  Tue, 27 Sep 2011 06:02:56 +0100
+ -- Bastian Blank <waldi@debian.org>  Thu, 03 Nov 2011 20:03:14 +0100
 
 linux-2.6 (3.1.0~rc7-1~experimental.1) experimental; urgency=low
 
