--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,3 +1,10 @@
+linux-2.6 (3.1.0-1~experimental.2) experimental; urgency=low
+
+  [ Ben Hutchings ]
+  * [alpha] wire up accept4 syscall, thanks to Michael Cree
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Fri, 04 Nov 2011 15:05:47 +0000
+
 linux-2.6 (3.1.0-1~experimental.1) experimental; urgency=low
 
   * New upstream release: http://kernelnewbies.org/Linux_3.1
