--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,4 +1,4 @@
-linux-2.6 (3.1.0-1~experimental.2) experimental; urgency=low
+linux-2.6 (3.1.0-1~experimental.2) UNRELEASED; urgency=low
 
   [ Ben Hutchings ]
   * [alpha] wire up accept4 syscall, thanks to Michael Cree
