[powerpc] ptrace: Fix build with gcc 4.6
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@18242 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -3,6 +3,7 @@ linux-2.6 (3.1.0-1~experimental.2) UNRELEASED; urgency=low
   [ Ben Hutchings ]
   * [alpha] wire up accept4 syscall, thanks to Michael Cree
   * iwlagn: fix modinfo display for 135 ucode (Closes: #647958)
+  * [powerpc] ptrace: Fix build with gcc 4.6
 
  -- Ben Hutchings <ben@decadent.org.uk>  Fri, 04 Nov 2011 15:05:47 +0000
 
