--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -4,6 +4,7 @@ linux-2.6 (3.1.0-1~experimental.2) UNRELEASED; urgency=low
   * [alpha] wire up accept4 syscall, thanks to Michael Cree
   * iwlagn: fix modinfo display for 135 ucode (Closes: #647958)
   * [powerpc] ptrace: Fix build with gcc 4.6
+  * [arm] add io{read,write}{16,32}be functions (fixes FTBFS)
 
  -- Ben Hutchings <ben@decadent.org.uk>  Fri, 04 Nov 2011 15:05:47 +0000
 
