--- a/linux-2.6/debian/patches/series/1~experimental.2
+++ b/linux-2.6/debian/patches/series/1~experimental.2
@@ -1,3 +1,4 @@
 + bugfix/alpha/alpha-wire-up-accept4-syscall.patch
 + bugfix/all/iwlagn-fix-modinfo-display-for-135-ucode.patch
 + bugfix/powerpc/powerpc-ptrace-Fix-build-with-gcc-4.6.patch
++ bugfix/arm/ARM-add-io-read-write-16-32-be-functions.patch
