--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,4 +1,7 @@
-linux-2.6 (3.1.0-1~experimental.2) UNRELEASED; urgency=low
+linux-2.6 (3.1.1-1) UNRELEASED; urgency=low
+
+  * New upstream stable update:
+    http://www.kernel.org/pub/linux/kernel/v3.x/ChangeLog-3.1.1
 
   [ Aurelien Jarno ]
   * [s390x] Add s390x udebs, based on linux-kernel-di-s390x-2.6.
