--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -15,6 +15,7 @@ linux-2.6 (3.1.1-1) UNRELEASED; urgency=low
   * [arm] add io{read,write}{16,32}be functions (fixes FTBFS)
   * cifs, freezer: add wait_event_freezekillable and have cifs use it
     (Closes: #488794)
+  * [alpha] Remove old, broken udeb configuration
 
  -- Ben Hutchings <ben@decadent.org.uk>  Fri, 04 Nov 2011 15:05:47 +0000
 
