Use the [powerpc] prefix for powerpc udeb change
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@18250 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -8,7 +8,7 @@ linux-2.6 (3.1.1-1) UNRELEASED; urgency=low
   * [sparc64] Sync udebs with sparc.
 
   [ Ben Hutchings ]
-  * Fix module selection for {ata,ide,scsi-core}-modules udebs on powerpc
+  * [powerpc] Fix module selection for {ata,ide,scsi-core}-modules udebs
   * [alpha] wire up accept4 syscall, thanks to Michael Cree
   * iwlagn: fix modinfo display for 135 ucode (Closes: #647958)
   * [powerpc] ptrace: Fix build with gcc 4.6
