DFSG: Remove drivers/staging/ft1000/ft1000-*/*.img
This is non-free firmware for drivers we don't build.  Related to
#609448, but I didn't think to check for actual binary files.


git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@18251 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -16,6 +16,8 @@ linux-2.6 (3.1.1-1) UNRELEASED; urgency=low
   * cifs, freezer: add wait_event_freezekillable and have cifs use it
     (Closes: #488794)
   * [alpha] Remove old, broken udeb configuration
+  * DFSG: Remove drivers/staging/ft1000/ft1000-*/*.img, non-free
+    firmware for drivers we don't build
 
  -- Ben Hutchings <ben@decadent.org.uk>  Fri, 04 Nov 2011 15:05:47 +0000
 
