[ia64] Add accept4() syscall, thanks to Émeric Maschino (Closes: #647825)
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@18260 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -20,6 +20,7 @@ linux-2.6 (3.1.1-1) UNRELEASED; urgency=low
     firmware for drivers we don't build
   * hfs: fix hfs_find_init() sb->ext_tree NULL ptr oops (CVE-2011-2203)
   * vmscan: fix shrinker callback bug in fs/super.c
+  * [ia64] Add accept4() syscall, thanks to Émeric Maschino (Closes: #647825)
 
  -- Ben Hutchings <ben@decadent.org.uk>  Fri, 04 Nov 2011 15:05:47 +0000
 
