Add bug closure for removed alpha udeb config
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@18261 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -15,7 +15,7 @@ linux-2.6 (3.1.1-1) UNRELEASED; urgency=low
   * [arm] add io{read,write}{16,32}be functions (fixes FTBFS)
   * cifs, freezer: add wait_event_freezekillable and have cifs use it
     (Closes: #488794)
-  * [alpha] Remove old, broken udeb configuration
+  * [alpha] Remove old, broken udeb configuration (Closes: #647586)
   * DFSG: Remove drivers/staging/ft1000/ft1000-*/*.img, non-free
     firmware for drivers we don't build
   * hfs: fix hfs_find_init() sb->ext_tree NULL ptr oops (CVE-2011-2203)
