block: Always check length of all iov entries in blk_rq_map_user_iov()
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@18262 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -21,6 +21,7 @@ linux-2.6 (3.1.1-1) UNRELEASED; urgency=low
   * hfs: fix hfs_find_init() sb->ext_tree NULL ptr oops (CVE-2011-2203)
   * vmscan: fix shrinker callback bug in fs/super.c
   * [ia64] Add accept4() syscall, thanks to Émeric Maschino (Closes: #647825)
+  * block: Always check length of all iov entries in blk_rq_map_user_iov()
 
  -- Ben Hutchings <ben@decadent.org.uk>  Fri, 04 Nov 2011 15:05:47 +0000
 
