--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -24,6 +24,9 @@ linux-2.6 (3.1.1-1) UNRELEASED; urgency=low
   * [x86] Add amilo-rfkill driver for some Fujitsu-Siemens Amilo laptops
     (Closes: #631664)
 
+  [ Arnaud Patard ]
+  * [arm] add missing ioread/write be functions to ixp4xx to fix FTBFS
+
  -- Ben Hutchings <ben@decadent.org.uk>  Fri, 04 Nov 2011 15:05:47 +0000
 
 linux-2.6 (3.1.0-1~experimental.1) experimental; urgency=low
