--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -28,6 +28,7 @@ linux-2.6 (3.1.1-1) UNRELEASED; urgency=low
   * [arm] add missing ioread/write be functions to ixp4xx to fix FTBFS
   * [armhf] allow to build kernel image for iMX51 and iMX53 and enable some
     iMX53 platforms.
+  * [armhf] add ahci for iMX53, pata for iMX51
 
  -- Ben Hutchings <ben@decadent.org.uk>  Fri, 04 Nov 2011 15:05:47 +0000
 
