--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,4 +1,4 @@
-linux-2.6 (3.1.1-1) UNRELEASED; urgency=low
+linux-2.6 (3.1.1-1) unstable; urgency=high
 
   * New upstream stable update:
     http://www.kernel.org/pub/linux/kernel/v3.x/ChangeLog-3.1.1
@@ -30,7 +30,7 @@ linux-2.6 (3.1.1-1) UNRELEASED; urgency=low
     iMX53 platforms.
   * [armhf] add ahci for iMX53, pata for iMX51
 
- -- Ben Hutchings <ben@decadent.org.uk>  Fri, 04 Nov 2011 15:05:47 +0000
+ -- Ben Hutchings <ben@decadent.org.uk>  Sun, 13 Nov 2011 20:08:09 +0000
 
 linux-2.6 (3.1.0-1~experimental.1) experimental; urgency=low
 
