--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,3 +1,9 @@
+linux-2.6 (3.2~rc1-1~experimental.1) UNRELEASED; urgency=low
+
+  * New upstream release candidate
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Mon, 14 Nov 2011 15:21:10 +0000
+
 linux-2.6 (3.1.1-1) unstable; urgency=high
 
   * New upstream stable update:
