security: Enable APPARMOR (Closes: #598408)
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@18395 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -8,6 +8,7 @@ linux-2.6 (3.2~rc5-1~experimental.1) UNRELEASED; urgency=low
 
   [ Ben Hutchings ]
   * [x86] et131x: Include driver in installer (Closes: #651440)
+  * security: Enable APPARMOR (Closes: #598408)
 
   [ Uwe Kleine-König ]
   * [amd64] Update rt featureset to 3.2-rc5-rt8
