--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -16,6 +16,9 @@ linux-2.6 (3.2~rc6-1~experimental.1) UNRELEASED; urgency=low
   [ Arnaud Patard ]
   * [arm] setup: initialize arm_dma_zone_size earlier (Closes: #651215)
 
+  [ Bastian Blank ]
+  * Use xz compression for image packages.
+
  -- Ben Hutchings <ben@decadent.org.uk>  Tue, 06 Dec 2011 04:31:19 +0000
 
 linux-2.6 (3.2~rc4-1~experimental.1) experimental; urgency=low
