--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -5,6 +5,7 @@ linux-2.6 (3.2~rc7-1~experimental.1) UNRELEASED; urgency=low
     - [x86] mpparse: Account for bus types other than ISA and PCI
       (Closes: #586494)
     - EHCI : Fix a regression in the ISO scheduler (Closes: #651382)
+    - [arm] setup: initialize arm_dma_zone_size earlier (Closes: #651215)
 
   [ Ben Hutchings ]
   * [x86] et131x: Include driver in installer (Closes: #651440)
@@ -12,9 +13,6 @@ linux-2.6 (3.2~rc7-1~experimental.1) UNRELEASED; urgency=low
 
   [ Uwe Kleine-König ]
   * [amd64] Update rt featureset to 3.2-rc5-rt8
-
-  [ Arnaud Patard ]
-  * [arm] setup: initialize arm_dma_zone_size earlier (Closes: #651215)
 
   [ Bastian Blank ]
   * Use xz compression for image packages.
