* debian/changelog: Update. * debian/rules.real: Use xz compression for all packages.
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@18422 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -15,7 +15,7 @@ linux-2.6 (3.2~rc7-1~experimental.1) UNRELEASED; urgency=low
   * [amd64] Update rt featureset to 3.2-rc5-rt8
 
   [ Bastian Blank ]
-  * Use xz compression for image packages.
+  * Use xz compression for all packages.
 
  -- Ben Hutchings <ben@decadent.org.uk>  Tue, 06 Dec 2011 04:31:19 +0000
 
