debian/changelog: Prepare to release (3.2~rc7-1~experimental.1).
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@18425 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,4 +1,4 @@
-linux-2.6 (3.2~rc7-1~experimental.1) UNRELEASED; urgency=low
+linux-2.6 (3.2~rc7-1~experimental.1) experimental; urgency=low
 
   * New upstream release candidate
     - [powerpc] pasemi_mac: Fix building as module
@@ -17,7 +17,7 @@ linux-2.6 (3.2~rc7-1~experimental.1) UNRELEASED; urgency=low
   [ Bastian Blank ]
   * Use xz compression for all packages.
 
- -- Ben Hutchings <ben@decadent.org.uk>  Tue, 06 Dec 2011 04:31:19 +0000
+ -- Bastian Blank <waldi@debian.org>  Wed, 28 Dec 2011 14:55:38 +0100
 
 linux-2.6 (3.2~rc4-1~experimental.1) experimental; urgency=low
 
