--- a/firmware-free/debian/changelog
+++ b/firmware-free/debian/changelog
@@ -1,3 +1,9 @@
+firmware-free (3.1) UNRELEASED; urgency=low
+
+  * Update to linux-support 3.1.0-1
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Thu, 29 Dec 2011 19:09:09 +0100
+
 firmware-free (3) unstable; urgency=low
 
   * Update to linux-support 2.6.38-1
