--- a/firmware-free/debian/changelog
+++ b/firmware-free/debian/changelog
@@ -1,6 +1,7 @@
 firmware-free (3.1) UNRELEASED; urgency=low
 
   * Update to linux-support 3.1.0-1
+  * Add isci parameter blob
 
  -- Ben Hutchings <ben@decadent.org.uk>  Thu, 29 Dec 2011 19:09:09 +0100
 
