--- a/firmware-free/debian/changelog
+++ b/firmware-free/debian/changelog
@@ -2,6 +2,7 @@ firmware-free (3.1) UNRELEASED; urgency=low
 
   * Update to linux-support 3.1.0-1
   * Add isci parameter blob
+  * Add makefiles and scripts for av7110, dsp56k and keyspan_pda firmware
 
  -- Ben Hutchings <ben@decadent.org.uk>  Thu, 29 Dec 2011 19:09:09 +0100
 
