--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -17,6 +17,10 @@ linux-2.6 (3.2~rc7-1~experimental.1) experimental; urgency=low
   [ Bastian Blank ]
   * Use xz compression for all packages.
 
+  [ Aurelien Jarno ]
+  * [arm, mips, mipsel, sh4] Add a virtio-modules udeb on flavours which
+    can be emulated by QEMU.
+
  -- Bastian Blank <waldi@debian.org>  Wed, 28 Dec 2011 14:55:38 +0100
 
 linux-2.6 (3.2~rc4-1~experimental.1) experimental; urgency=low
