--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,3 +1,9 @@
+linux-2.6 (3.2~rc7-1~experimental.2) UNRELEASED; urgency=low
+
+  * media/dvb: Enable DVB_USB_IT913X as module (Closes: #653776)
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Mon, 02 Jan 2012 02:55:28 +0000
+
 linux-2.6 (3.2~rc7-1~experimental.1) experimental; urgency=low
 
   * New upstream release candidate
