--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,6 +1,8 @@
 linux-2.6 (3.2~rc7-1~experimental.2) UNRELEASED; urgency=low
 
   * media/dvb: Enable DVB_USB_IT913X as module (Closes: #653776)
+  * [arm] Remove use of possibly undefined BUILD_BUG_ON in <asm/bug.h>
+    (fixes FTBFS)
 
  -- Ben Hutchings <ben@decadent.org.uk>  Mon, 02 Jan 2012 02:55:28 +0000
 
