Move Aurelien's udeb change to the current changelog entry
This change was made after 3.2~rc7-1~experimental.1.


git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@18450 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,5 +1,10 @@
 linux-2.6 (3.2~rc7-1~experimental.2) UNRELEASED; urgency=low
 
+  [ Aurelien Jarno ]
+  * [arm, mips, mipsel, sh4] Add a virtio-modules udeb on flavours which
+    can be emulated by QEMU.
+
+  [ Ben Hutchings ]
   * media/dvb: Enable DVB_USB_IT913X as module (Closes: #653776)
   * [arm] Remove use of possibly undefined BUILD_BUG_ON in <asm/bug.h>
     (fixes FTBFS)
@@ -24,10 +29,6 @@ linux-2.6 (3.2~rc7-1~experimental.1) experimental; urgency=low
 
   [ Bastian Blank ]
   * Use xz compression for all packages.
-
-  [ Aurelien Jarno ]
-  * [arm, mips, mipsel, sh4] Add a virtio-modules udeb on flavours which
-    can be emulated by QEMU.
 
  -- Bastian Blank <waldi@debian.org>  Wed, 28 Dec 2011 14:55:38 +0100
 
