--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,4 +1,6 @@
-linux-2.6 (3.2~rc7-1~experimental.2) UNRELEASED; urgency=low
+linux-2.6 (3.2-1~experimental.1) UNRELEASED; urgency=low
+
+  * New upstream release: http://kernelnewbies.org/Linux_3.2
 
   [ Aurelien Jarno ]
   * [arm, mips, mipsel, sh4] Add a virtio-modules udeb on flavours which
