* debian/changelog: Update. * debian/config/kernelarch-x86/config-arch-64:   Enable CRYPTO_SHA1_SSSE3, CRYPTO_BLOWFISH_X86_64 and   CRYPTO_TWOFISH_X86_64_3WAY.
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@18455 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -11,6 +11,9 @@ linux-2.6 (3.2-1~experimental.1) UNRELEASED; urgency=low
   * [arm] Remove use of possibly undefined BUILD_BUG_ON in <asm/bug.h>
     (fixes FTBFS)
 
+  [ Bastian Blank ]
+  * crypt: Enable some amd64 only ciphers.
+
  -- Ben Hutchings <ben@decadent.org.uk>  Mon, 02 Jan 2012 02:55:28 +0000
 
 linux-2.6 (3.2~rc7-1~experimental.1) experimental; urgency=low
