Install /lib/modules/<kernel-version>/modules.builtin in linux-image packages
We want to avoid shipping any files generated by depmod (which should
be generated in the postinst) and the 'build' and 'source' symlinks
(which should be installed by the linux-headers package).  Since
depmod has generated more and more files over time, we have been
removing all unexpected files under /lib/modules/<kernel-version>,
accidentally including modules.builtin which is *not* generated by
depmod.

Try to solve the problem generally by substituting a dummy depmod
command and then just removing the 'build' and 'source' symlinks.



git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@18456 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -10,6 +10,8 @@ linux-2.6 (3.2-1~experimental.1) UNRELEASED; urgency=low
   * media/dvb: Enable DVB_USB_IT913X as module (Closes: #653776)
   * [arm] Remove use of possibly undefined BUILD_BUG_ON in <asm/bug.h>
     (fixes FTBFS)
+  * Install /lib/modules/<kernel-version>/modules.builtin in linux-image
+    packages
 
   [ Bastian Blank ]
   * crypt: Enable some amd64 only ciphers.
