Make sure that kernel image is not too big on armel by disabling apparmor and tomoyo
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@18472 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -16,6 +16,9 @@ linux-2.6 (3.2-1~experimental.1) UNRELEASED; urgency=low
   [ Bastian Blank ]
   * crypt: Enable some amd64 only ciphers.
 
+  [ Arnaud Patard ]
+  * disable tomoyo and apparmor to allow kernel image to fit into flash.
+
  -- Ben Hutchings <ben@decadent.org.uk>  Mon, 02 Jan 2012 02:55:28 +0000
 
 linux-2.6 (3.2~rc7-1~experimental.1) experimental; urgency=low
