--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -18,6 +18,7 @@ linux-2.6 (3.2-1~experimental.1) UNRELEASED; urgency=low
 
   [ Arnaud Patard ]
   * disable tomoyo and apparmor to allow kernel image to fit into flash.
+  * add back ixp4xx gpiolib patch
 
  -- Ben Hutchings <ben@decadent.org.uk>  Mon, 02 Jan 2012 02:55:28 +0000
 
