Backport topdown mmap support on arm (http://lists.debian.org/debian-arm/2011/12/msg00136.html)
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@18475 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -19,6 +19,7 @@ linux-2.6 (3.2-1~experimental.1) UNRELEASED; urgency=low
   [ Arnaud Patard ]
   * disable tomoyo and apparmor to allow kernel image to fit into flash.
   * add back ixp4xx gpiolib patch
+  * backport topdown mmap support from rmk's tree
 
  -- Ben Hutchings <ben@decadent.org.uk>  Mon, 02 Jan 2012 02:55:28 +0000
 
