debian/changelog: Update.
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@18508 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -15,6 +15,11 @@ linux-2.6 (3.2.0-1~experimental.1) UNRELEASED; urgency=low
 
   [ Bastian Blank ]
   * crypt: Enable some amd64 only ciphers.
+  * Packaging updates:
+    - Use unicode.
+    - Cleanup config handling.
+    - Remove support for plain-xen image type.
+    - Allow disabling debug infos for unreleased builds.
 
   [ Arnaud Patard ]
   * disable tomoyo and apparmor to allow kernel image to fit into flash.
