[ia64] Add accept4() syscall (Closes: #647825)
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@18510 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -12,6 +12,7 @@ linux-2.6 (3.2.0-1~experimental.1) UNRELEASED; urgency=low
     (fixes FTBFS)
   * Install /lib/modules/<kernel-version>/modules.builtin in linux-image
     packages
+  * [ia64] Add accept4() syscall (Closes: #647825)
 
   [ Bastian Blank ]
   * crypt: Enable some amd64 only ciphers.
