--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -15,7 +15,7 @@ linux-2.6 (3.2.0-1~experimental.1) UNRELEASED; urgency=low
   * [ia64] Add accept4() syscall (Closes: #647825)
 
   [ Bastian Blank ]
-  * crypt: Enable some amd64 only ciphers.
+  * [amd64] crypt: Enable some amd64 only ciphers.
   * Packaging updates:
     - Use unicode.
     - Cleanup config handling.
@@ -23,9 +23,9 @@ linux-2.6 (3.2.0-1~experimental.1) UNRELEASED; urgency=low
     - Allow disabling debug infos for unreleased builds.
 
   [ Arnaud Patard ]
-  * disable tomoyo and apparmor to allow kernel image to fit into flash.
-  * add back ixp4xx gpiolib patch
-  * backport topdown mmap support from rmk's tree
+  * [armel] disable tomoyo and apparmor to allow kernel image to fit into flash.
+  * [armel] add back ixp4xx gpiolib patch
+  * [arm] backport topdown mmap support from rmk's tree
 
  -- Ben Hutchings <ben@decadent.org.uk>  Mon, 02 Jan 2012 02:55:28 +0000
 
