staging: Enable STAGING_MEDIA, which various drivers now depend on (Closes: #654800)
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@18514 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -13,6 +13,8 @@ linux-2.6 (3.2.1-1~experimental.1) UNRELEASED; urgency=low
   * Install /lib/modules/<kernel-version>/modules.builtin in linux-image
     packages
   * [ia64] Add accept4() syscall (Closes: #647825)
+  * staging: Enable STAGING_MEDIA, which various drivers now depend on
+    (Closes: #654800)
 
   [ Bastian Blank ]
   * [amd64] crypt: Enable some amd64 only ciphers.
