--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -15,6 +15,8 @@ linux-2.6 (3.2.1-1~experimental.1) UNRELEASED; urgency=low
   * [ia64] Add accept4() syscall (Closes: #647825)
   * [x86] staging: Enable STAGING_MEDIA, which various drivers now depend on
     (Closes: #654800)
+  * [um,m68k] Register a generic CPU device (fixes regression introduced by
+    the fix for #649216)
 
   [ Bastian Blank ]
   * [amd64] crypt: Enable some amd64 only ciphers.
