[alpha] add io{read,write}{16,32}be functions, thanks to Michael Cree
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@18517 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -17,6 +17,7 @@ linux-2.6 (3.2.1-1~experimental.1) UNRELEASED; urgency=low
     (Closes: #654800)
   * [um,m68k] Register a generic CPU device (fixes regression introduced by
     the fix for #649216)
+  * [alpha] add io{read,write}{16,32}be functions, thanks to Michael Cree
 
   [ Bastian Blank ]
   * [amd64] crypt: Enable some amd64 only ciphers.
