--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -31,6 +31,8 @@ linux-2.6 (3.2.1-1~experimental.1) UNRELEASED; urgency=low
   * [armel] disable tomoyo and apparmor to allow kernel image to fit into flash.
   * [armel] add back ixp4xx gpiolib patch
   * [arm] backport topdown mmap support from rmk's tree
+  * [armel] Enable support from LaCIE kirkwood devices, thanks to Simon Guinot
+    (Closes: #655344)
 
  -- Ben Hutchings <ben@decadent.org.uk>  Mon, 02 Jan 2012 02:55:28 +0000
 
