Backport 88f6282 A1 support from mainline
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@18520 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -33,6 +33,7 @@ linux-2.6 (3.2.1-1~experimental.1) UNRELEASED; urgency=low
   * [arm] backport topdown mmap support from rmk's tree
   * [armel] Enable support from LaCIE kirkwood devices, thanks to Simon Guinot
     (Closes: #655344)
+  * [armel] Backport 88f6282 A1 support
 
  -- Ben Hutchings <ben@decadent.org.uk>  Mon, 02 Jan 2012 02:55:28 +0000
 
