Add mpt2sas to scsi-common-modules udeb on sparc and sparc64, needed by Niagara T3 machines.
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@18523 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -35,6 +35,10 @@ linux-2.6 (3.2.1-1~experimental.1) UNRELEASED; urgency=low
     (Closes: #655344)
   * [armel] Backport 88f6282 A1 support
 
+  [ Jurij Smakov ]
+  * [sparc] Add mpt2sas to scsi-common-modules udeb on sparc and sparc64,
+    needed by Niagara T3 machines.
+
  -- Ben Hutchings <ben@decadent.org.uk>  Mon, 02 Jan 2012 02:55:28 +0000
 
 linux-2.6 (3.2~rc7-1~experimental.1) experimental; urgency=low
