Note the IGMP fix in 3.2.1
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@18528 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,6 +1,10 @@
 linux-2.6 (3.2.1-1~experimental.1) UNRELEASED; urgency=low
 
   * New upstream release: http://kernelnewbies.org/Linux_3.2
+  * New upstream stable update:
+    http://www.kernel.org/pub/linux/kernel/v3.x/ChangeLog-3.2.1
+    - igmp: Avoid zero delay when receiving odd mixture of IGMP queries
+      (Closes: #654876) (CVE-2012-0207)
 
   [ Aurelien Jarno ]
   * [arm, mips, mipsel, sh4] Add a virtio-modules udeb on flavours which
