net: reintroduce missing rcu_assign_pointer() calls
Fixes a regression in 3.2.


git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@18529 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -22,6 +22,7 @@ linux-2.6 (3.2.1-1~experimental.1) UNRELEASED; urgency=low
   * [um,m68k] Register a generic CPU device (fixes regression introduced by
     the fix for #649216)
   * [alpha] add io{read,write}{16,32}be functions, thanks to Michael Cree
+  * net: reintroduce missing rcu_assign_pointer() calls
 
   [ Bastian Blank ]
   * [amd64] crypt: Enable some amd64 only ciphers.
