--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -24,6 +24,8 @@ linux-2.6 (3.2.1-1~experimental.1) UNRELEASED; urgency=low
   * [alpha] add io{read,write}{16,32}be functions, thanks to Michael Cree
   * net: reintroduce missing rcu_assign_pointer() calls
   * Restrict ioctl forwarding on partitions and logical volumes (CVE-2011-4127)
+  * Input: ALPS - add support for protocol versions 3 and 4
+    (Closes: #618422, #648207)
 
   [ Bastian Blank ]
   * [amd64] crypt: Enable some amd64 only ciphers.
