[powerpc/powerpc64] udeb: Drop zlib-modules; ZLIB_DEFLATE is built-in
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@18532 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -26,6 +26,7 @@ linux-2.6 (3.2.1-1~experimental.1) UNRELEASED; urgency=low
   * Restrict ioctl forwarding on partitions and logical volumes (CVE-2011-4127)
   * Input: ALPS - add support for protocol versions 3 and 4
     (Closes: #618422, #648207)
+  * [powerpc/powerpc64] udeb: Drop zlib-modules; ZLIB_DEFLATE is built-in
 
   [ Bastian Blank ]
   * [amd64] crypt: Enable some amd64 only ciphers.
