--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -24,7 +24,7 @@ linux-2.6 (3.2.1-1~experimental.1) UNRELEASED; urgency=low
   * Input: ALPS - add support for protocol versions 3 and 4
     (Closes: #618422, #648207)
   * [powerpc/powerpc64] udeb: Drop zlib-modules; ZLIB_DEFLATE is built-in
-  * [amd64] iommu: Enable INTEL_IOMMU, INTEL_IOMMU_FLOPPY_WA
+  * [amd64] iommu: Enable INTEL_IOMMU, INTEL_IOMMU_FLOPPY_WA, IRQ_REMAP
 
   [ Bastian Blank ]
   * [amd64] crypt: Enable some amd64 only ciphers.
