[amd64] cpufreq: Enable X86_P4_CLOCKMOD (Closes: #656328)
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@18564 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -25,6 +25,7 @@ linux-2.6 (3.2.1-1~experimental.1) UNRELEASED; urgency=low
     (Closes: #618422, #648207)
   * [powerpc/powerpc64] udeb: Drop zlib-modules; ZLIB_DEFLATE is built-in
   * [amd64] iommu: Enable INTEL_IOMMU, INTEL_IOMMU_FLOPPY_WA, IRQ_REMAP
+  * [amd64] cpufreq: Enable X86_P4_CLOCKMOD (Closes: #656328)
 
   [ Bastian Blank ]
   * [amd64] crypt: Enable some amd64 only ciphers.
