Refresh list of related firmware packages for bug script
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@18566 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,4 +1,4 @@
-linux-2.6 (3.2.1-1~experimental.1) UNRELEASED; urgency=low
+linux-2.6 (3.2.1-1) UNRELEASEDu; urgency=low
 
   * New upstream release: http://kernelnewbies.org/Linux_3.2
   * New upstream stable update:
@@ -26,6 +26,7 @@ linux-2.6 (3.2.1-1~experimental.1) UNRELEASED; urgency=low
   * [powerpc/powerpc64] udeb: Drop zlib-modules; ZLIB_DEFLATE is built-in
   * [amd64] iommu: Enable INTEL_IOMMU, INTEL_IOMMU_FLOPPY_WA, IRQ_REMAP
   * [amd64] cpufreq: Enable X86_P4_CLOCKMOD (Closes: #656328)
+  * Refresh list of related firmware packages for bug script
 
   [ Bastian Blank ]
   * [amd64] crypt: Enable some amd64 only ciphers.
