Prepare to release linux-2.6 (3.2.1-1).
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@18577 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,4 +1,4 @@
-linux-2.6 (3.2.1-1) UNRELEASEDu; urgency=low
+linux-2.6 (3.2.1-1) unstable; urgency=low
 
   * New upstream release: http://kernelnewbies.org/Linux_3.2
   * New upstream stable update:
@@ -48,7 +48,7 @@ linux-2.6 (3.2.1-1) UNRELEASEDu; urgency=low
   * [sparc] Add mpt2sas to scsi-common-modules udeb on sparc and sparc64,
     needed by Niagara T3 machines.
 
- -- Ben Hutchings <ben@decadent.org.uk>  Mon, 02 Jan 2012 02:55:28 +0000
+ -- Ben Hutchings <ben@decadent.org.uk>  Wed, 18 Jan 2012 16:14:12 +0000
 
 linux-2.6 (3.2~rc7-1~experimental.1) experimental; urgency=low
 
