--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,3 +1,9 @@
+linux-2.6 (3.2.1-2) UNRELEASED; urgency=low
+
+  * 
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Thu, 19 Jan 2012 05:42:57 +0000
+
 linux-2.6 (3.2.1-1) unstable; urgency=low
 
   * New upstream release: http://kernelnewbies.org/Linux_3.2
