--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,6 +1,11 @@
 linux-2.6 (3.2.1-2) UNRELEASED; urgency=low
 
-  * 
+  [ Stefan Lippers-Hollmann ]
+  * udeb: Add missing modules to nic-wireless-modules:
+    - lib80211 encryption algorithms (lib80211_crypt_{wep,ccmptkip})
+      needed for e.g. ipw2x00 wlan modules (Closes: #636259)
+    - ath9k_htc, carl9170 and rt2800{pci,usb} drivers
+      (Closes: #636321, #636351, #636385)
 
  -- Ben Hutchings <ben@decadent.org.uk>  Thu, 19 Jan 2012 05:42:57 +0000
 
