--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -7,6 +7,11 @@ linux-2.6 (3.2.1-2) UNRELEASED; urgency=low
     - ath9k_htc, carl9170 and rt2800{pci,usb} drivers
       (Closes: #636321, #636353, #636385)
 
+  [ Ben Hutchings ]
+  * Update Vcs-Browser URL for the switch to ViewVC
+  * Point Vcs-{Svn,Browser} at trunk branch, since the sid branch does
+    not always exist
+
  -- Ben Hutchings <ben@decadent.org.uk>  Thu, 19 Jan 2012 05:42:57 +0000
 
 linux-2.6 (3.2.1-1) unstable; urgency=low
