--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -14,6 +14,10 @@ linux-2.6 (3.2.1-2) UNRELEASED; urgency=low
   * Build linux-libc-dev without multiarch if dpkg does not support it,
     to support backports
 
+  [ Aurelien Jarno ]
+  * [x86] Backport KVM nested VMX fixes from 3.3 to fix warnings and
+    crashes of L1 guests.
+
  -- Ben Hutchings <ben@decadent.org.uk>  Thu, 19 Jan 2012 05:42:57 +0000
 
 linux-2.6 (3.2.1-1) unstable; urgency=low
