--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,4 +1,4 @@
-linux-2.6 (3.2.1-2) UNRELEASED; urgency=high
+linux-2.6 (3.2.1-2) unstable; urgency=high
 
   [ Stefan Lippers-Hollmann ]
   * udeb: Add missing modules to nic-wireless-modules:
@@ -19,7 +19,7 @@ linux-2.6 (3.2.1-2) UNRELEASED; urgency=high
   * [x86] Backport KVM nested VMX fixes from 3.3 to fix warnings and
     crashes of L1 guests.
 
- -- Ben Hutchings <ben@decadent.org.uk>  Thu, 19 Jan 2012 05:42:57 +0000
+ -- Ben Hutchings <ben@decadent.org.uk>  Mon, 23 Jan 2012 15:10:04 +0000
 
 linux-2.6 (3.2.1-1) unstable; urgency=low
 
