--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -4,6 +4,7 @@ linux-2.6 (3.2.1-3) UNRELEASED; urgency=low
   * Stop changing 'build' and 'source' symlinks in linux-image maintainer
     scripts; these symlinks now belong to the linux-headers packages
   * Remove unused configuration variables from linux-image maintainer scripts
+  * Remove last vestige of /usr/doc transition from linux-image prerm script
 
  -- Ben Hutchings <ben@decadent.org.uk>  Tue, 24 Jan 2012 06:19:55 +0000
 
