--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -7,6 +7,7 @@ linux-2.6 (3.2.1-3) UNRELEASED; urgency=low
   * Remove last vestige of /usr/doc transition from linux-image prerm script
   * Remove modules.*.bin in linux-image postrm script; currently
     modules.builtin.bin is left behind
+  * [alpha] Build with gcc-4.5 (Closes: #657112)
 
  -- Ben Hutchings <ben@decadent.org.uk>  Tue, 24 Jan 2012 06:19:55 +0000
 
