--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -15,6 +15,10 @@ linux-2.6 (3.2.1-3) UNRELEASED; urgency=low
   * Pass the cflags define as CFLAGS_KERNEL and CFLAGS_MODULE to kbuild
   * [m68k] Use cflags -ffreestanding (Closes: #648996)
 
+  [ Aurelien Jarno ]
+  * [mips,octeon] Disabled CONFIG_FIXED_PHY as it conflicts with the octeon
+    phy driver.
+
  -- Ben Hutchings <ben@decadent.org.uk>  Tue, 24 Jan 2012 06:19:55 +0000
 
 linux-2.6 (3.2.1-2) unstable; urgency=high
