--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -17,6 +17,7 @@ linux-2.6 (3.2.2-1) UNRELEASED; urgency=low
       behind
   * [alpha] Build with gcc-4.5 (Closes: #657112)
   * aufs: Update to aufs3.2-20120109 (fixes FTBFS on m68k)
+  * [m68k] Fix assembler constraint to prevent overeager gcc optimisation
 
   [ Thorsten Glaser ]
   * [m68k] Use gcc-4.6 like (almost) all other architectures
