--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -21,6 +21,8 @@ linux-2.6 (3.2.2-1) UNRELEASED; urgency=low
   * sdhci-pci: Include driver in installer
   * [armel] udeb: Do not attempt to build lzo-modules udeb as lzo_compress
     is now built-in (fixes FTBFS)
+  * [armhf] udeb: Include rt2800usb in nic-modules, replacing rt2870sta
+    which was removed from the kernel
 
   [ Thorsten Glaser ]
   * [m68k] Use gcc-4.6 like (almost) all other architectures
