--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,3 +1,10 @@
+linux-2.6 (3.2.2-2) UNRELEASED; urgency=low
+
+  [ Ben Hutchings ]
+  * [armel] Add mv78xx0 flavour; thanks to Steve McIntyre for the config
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Thu, 02 Feb 2012 03:18:04 +0000
+
 linux-2.6 (3.2.2-1) unstable; urgency=low
 
   * New upstream stable update:
