--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -2,6 +2,7 @@ linux-2.6 (3.2.2-2) UNRELEASED; urgency=low
 
   [ Ben Hutchings ]
   * [armel] Add mv78xx0 flavour; thanks to Steve McIntyre for the config
+  * net: Disable FIXED_PHY; this driver only causes trouble
 
  -- Ben Hutchings <ben@decadent.org.uk>  Thu, 02 Feb 2012 03:18:04 +0000
 
