Remove build-dependency on linux-support
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@18679 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/firmware-free/debian/changelog
+++ b/firmware-free/debian/changelog
@@ -1,6 +1,8 @@
 firmware-free (3.1) UNRELEASED; urgency=low
 
   * Update to linux-support 3.1.0-1
+    - Remove build-dependency, as this is only used when preparing the
+      source package
   * Add isci parameter blob
   * Add makefiles and scripts for av7110, dsp56k and keyspan_pda firmware
 
