--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,3 +1,34 @@
+linux-2.6 (3.3.6-1~experimental.1) experimental; urgency=low
+
+  * New upstream stable update:
+    http://www.kernel.org/pub/linux/kernel/v3.x/ChangeLog-3.3.5
+    http://www.kernel.org/pub/linux/kernel/v3.x/ChangeLog-3.3.6
+    - USB: cdc-wdm: fix race leading leading to memory corruption
+    - autofs: make the autofsv5 packet file descriptor use a packetized pipe
+      (Closes: #633423)
+    - PM / Hibernate: fix the number of pages used for hibernate/thaw buffering
+      (Closes: #659363)
+    - efi: Validate UEFI boot variables
+    - efivars: Improve variable validation
+    - fs/cifs: fix parsing of dfs referrals
+    - hfsplus: Fix potential buffer overflows (CVE-2012-2319)
+    - exit_signal: fix the "parent has changed security domain" logic
+    - net: l2tp: unlock socket lock before returning from l2tp_ip_sendmsg
+    - sky2: fix receive length error in mixed non-VLAN/VLAN traffic
+      (Closes: #492853)
+    - [s390] KVM: do store status after handling STOP_ON_STOP bit
+    - [s390] KVM: Sanitize fpc registers for KVM_SET_FPU
+    - KVM: Fix write protection race during dirty logging
+    - KVM: mmu_notifier: Flush TLBs before releasing mmu_lock
+    - KVM: Ensure all vcpus are consistent with in-kernel irqchip settings
+      (CVE-2012-1601)
+    - KVM: nVMX: Fix erroneous exception bitmap check
+    - KVM: VMX: Fix kvm_set_shared_msr() called in preemptible context
+    - KVM: lock slots_lock around device assignment
+    - hugepages: fix use after free bug in "quota" handling
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Fri, 18 May 2012 03:53:16 +0100
+
 linux-2.6 (3.3.4-1~experimental.1) experimental; urgency=low
 
   * New upstream stable update:
