enable DM_VERITY
while at it explicitly disable some dm debug stuff.

git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@19026 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -2,6 +2,8 @@ linux-2.6 (3.4-1~experimental.1) UNRELEASED; urgency=low
 
   * New upstream release: http://kernelnewbies.org/Linux_3.4
 
+  * Enable DM_VERITY.
+
  -- Ben Hutchings <ben@decadent.org.uk>  Mon, 21 May 2012 01:37:21 +0100
 
 linux-2.6 (3.3.6-1~experimental.1) experimental; urgency=low
