--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,6 +1,8 @@
-linux-2.6 (3.4-1~experimental.1) UNRELEASED; urgency=low
+linux-2.6 (3.4.1-1~experimental.1) UNRELEASED; urgency=low
 
   * New upstream release: http://kernelnewbies.org/Linux_3.4
+  * New upstream stable update:
+    http://www.kernel.org/pub/linux/kernel/v3.x/ChangeLog-3.4.1
 
   [ maximilian attems ]
   * Enable DM_VERITY, NF_CONNTRACK_TIMEOUT, NF_CT_NETLINK_TIMEOUT,
