Update initramfs on installation (Closes: #555949)
It may need to include the firmware for 3c574_cs, 3c589_cs, isci or pcnet_cs.


git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@19158 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/firmware-free/debian/changelog
+++ b/firmware-free/debian/changelog
@@ -10,6 +10,8 @@ firmware-free (3.1) UNRELEASED; urgency=low
   * Add firmware for ITL USB-DUXsigma
   * Set the upstream homepage URL to the current gitweb page for
     linux-firmware.git
+  * Update initramfs on installation, since it may need to include the
+    firmware for 3c574_cs, 3c589_cs, isci or pcnet_cs (Closes: #555949)
 
  -- Ben Hutchings <ben@decadent.org.uk>  Thu, 29 Dec 2011 19:09:09 +0100
 
