Update to 3.6 (Closes: #690011)
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@19421 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-tools/debian/changelog
+++ b/linux-tools/debian/changelog
@@ -1,5 +1,8 @@
-linux-tools (3.5-1~experimental.2) UNRELEASED; urgency=low
+linux-tools (3.6-1~experimental.1) UNRELEASED; urgency=low
 
+  * New upstream release (Closes: #690011)
+
+  [ Ben Hutchings ]
   * genorig: Accept xz-compressed upstream tarballs and patches, and
     generate an xz-compressed orig tarball, thanks to Sedat Dilek
   * source: Enable xz-compression for debian directory tarball
