Prepare to release linux-tools (3.6-1~experimental.1).
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@19538 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-tools/debian/changelog
+++ b/linux-tools/debian/changelog
@@ -1,4 +1,4 @@
-linux-tools (3.6-1~experimental.1) UNRELEASED; urgency=low
+linux-tools (3.6-1~experimental.1) experimental; urgency=low
 
   * New upstream release (Closes: #690011)
 
@@ -10,7 +10,7 @@ linux-tools (3.6-1~experimental.1) UNRELEASED; urgency=low
   [ Jonathan Nieder ]
   * Add myself to uploaders list.
 
- -- Ben Hutchings <ben@decadent.org.uk>  Tue, 21 Aug 2012 05:05:42 +0100
+ -- Jonathan Nieder <jrnieder@gmail.com>  Sat, 24 Nov 2012 13:40:28 -0800
 
 linux-tools (3.5-1~experimental.1) experimental; urgency=low
 
