[amd64] linux-tools: Enable optimisations and special-casing of x86_64 (Closes: #694759)
This requires including another source file in the 'orig' tarball, so
bump to the latest stable update.  I don't think it has any fixes
relevant to linux-tools.


git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@19565 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-tools/debian/changelog
+++ b/linux-tools/debian/changelog
@@ -1,3 +1,13 @@
+linux-tools (3.6.8-1~experimental.1) UNRELEASED; urgency=low
+
+  * New upstream stable update
+
+  [ Ben Hutchings ]
+  * [amd64] linux-tools: Enable optimisations and special-casing of x86_64
+    (Closes: #694759)
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Sun, 02 Dec 2012 00:33:22 +0000
+
 linux-tools (3.6-1~experimental.1) experimental; urgency=low
 
   * New upstream release (Closes: #690011)
