Add bug closure for new upstream version
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@19904 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-tools/debian/changelog
+++ b/linux-tools/debian/changelog
@@ -1,6 +1,6 @@
 linux-tools (3.8-1~experimental.1) UNRELEASED; urgency=low
 
-  * New upstream release
+  * New upstream release (Closes: #702450)
 
  -- Jonathan Nieder <jrnieder@gmail.com>  Sat, 29 Dec 2012 22:51:43 -0800
 
