linux-tools: Install bash_completion script for perf with a version-dependent name (Closes: #701790)
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@19906 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-tools/debian/changelog
+++ b/linux-tools/debian/changelog
@@ -2,6 +2,10 @@ linux-tools (3.8.2-1~experimental.1) UNRELEASED; urgency=low
 
   * New upstream release (Closes: #702450)
 
+  [ Ben Hutchings ]
+  * linux-tools: Install bash_completion script for perf with a version-
+    dependent name (Closes: #701790)
+
  -- Jonathan Nieder <jrnieder@gmail.com>  Sat, 29 Dec 2012 22:51:43 -0800
 
 linux-tools (3.7.1-1~experimental.1) experimental; urgency=low
