Update to 3.10, thanks to Chris Boot for updating the modpost patch
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@20323 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-tools/debian/changelog
+++ b/linux-tools/debian/changelog
@@ -1,3 +1,9 @@
+linux-tools (3.10-1~exp1) UNRELEASED; urgency=low
+
+  * New upstream release
+
+ -- Chris Boot <debian@bootc.net>  Mon, 01 Jul 2013 22:07:42 +0100
+
 linux-tools (3.9.4-1) unstable; urgency=low
 
   * New upstream release
