debian/patches: Add DEP-3 headers (From, Subject, Forwarded) to all patches
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@20324 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-tools/debian/changelog
+++ b/linux-tools/debian/changelog
@@ -2,6 +2,12 @@ linux-tools (3.10-1~exp1) UNRELEASED; urgency=low
 
   * New upstream release
 
+  [ Chris Boot ]
+  * Update modpost-symbol-prefix.patch for 3.10
+
+  [ Ben Hutchings ]
+  * debian/patches: Add DEP-3 headers (From, Subject, Forwarded) to all patches
+
  -- Chris Boot <debian@bootc.net>  Mon, 01 Jul 2013 22:07:42 +0100
 
 linux-tools (3.9.4-1) unstable; urgency=low
